Add app-engine plugin.

--- a/spike1/grails1/application.properties
+++ b/spike1/grails1/application.properties
@@ -1,6 +1,9 @@
 #Grails Metadata file
-#Thu Oct 14 20:57:18 BST 2010
+#Thu Oct 14 21:21:32 BST 2010
 app.grails.version=1.3.4
 app.name=grails1
 app.servlet.version=2.4
 app.version=0.1
+appengine.persistence=jpa
+plugins.app-engine=0.8.10
+plugins.gorm-jpa=0.7.1
