--- a/spike1/grails1/.project
+++ b/spike1/grails1/.project
@@ -20,22 +20,32 @@
 		<link>
 			<name>app-engine-0.8.10-grails-app-controllers</name>
 			<type>2</type>
-			<location>C:/Documents and Settings/Administrator/.grails/1.3.4/projects/grails1/plugins/app-engine-0.8.10/grails-app/controllers</location>
+			<location>/Users/steve/.grails/1.3.4/projects/grails1/plugins/app-engine-0.8.10/grails-app/controllers</location>
 		</link>
 		<link>
 			<name>app-engine-0.8.10-grails-app-i18n</name>
 			<type>2</type>
-			<location>C:/Documents and Settings/Administrator/.grails/1.3.4/projects/grails1/plugins/app-engine-0.8.10/grails-app/i18n</location>
+			<location>/Users/steve/.grails/1.3.4/projects/grails1/plugins/app-engine-0.8.10/grails-app/i18n</location>
 		</link>
 		<link>
 			<name>app-engine-0.8.10-src-groovy</name>
 			<type>2</type>
-			<location>C:/Documents and Settings/Administrator/.grails/1.3.4/projects/grails1/plugins/app-engine-0.8.10/src/groovy</location>
+			<location>/Users/steve/.grails/1.3.4/projects/grails1/plugins/app-engine-0.8.10/src/groovy</location>
 		</link>
 		<link>
-			<name>tomcat-1.3.4-src-groovy</name>
+			<name>gorm-jpa-0.7.1-grails-app-i18n</name>
 			<type>2</type>
-			<location>C:/Documents and Settings/Administrator/.grails/1.3.4/projects/grails1/plugins/tomcat-1.3.4/src/groovy</location>
+			<location>/Users/steve/.grails/1.3.4/projects/grails1/plugins/gorm-jpa-0.7.1/grails-app/i18n</location>
+		</link>
+		<link>
+			<name>gorm-jpa-0.7.1-src-groovy</name>
+			<type>2</type>
+			<location>/Users/steve/.grails/1.3.4/projects/grails1/plugins/gorm-jpa-0.7.1/src/groovy</location>
+		</link>
+		<link>
+			<name>gorm-jpa-0.7.1-src-java</name>
+			<type>2</type>
+			<location>/Users/steve/.grails/1.3.4/projects/grails1/plugins/gorm-jpa-0.7.1/src/java</location>
 		</link>
 	</linkedResources>
 </projectDescription>
