Update project and classpath to include Google App Engine SDK

--- a/spike1/grails1/.classpath
+++ b/spike1/grails1/.classpath
@@ -41,5 +41,6 @@
 			<attribute name="com.springsource.sts.grails.core.SOURCE_FOLDER" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="output" path="web-app/WEB-INF/classes"/>
 </classpath>
